--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^5.3.3",
     "gatsby-plugin-image": "^3.3.2",
+    "gatsby-plugin-manifest": "^5.4.0",
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-plugin-styled-components": "^6.3.0",
     "gatsby-source-filesystem": "^5.3.1",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
+    "react-horizontal-scrolling-menu": "^3.2.3",
+    "react-scrollbars-custom": "^4.1.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
