--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-plugin-styled-components": "^6.3.0",
     "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-remark": "^6.4.0",
+    "gatsby-transformer-sharp": "^5.4.0",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^3.2.3",
+    "react-scroll": "^1.8.9",
     "react-scrollbars-custom": "^4.1.1",
     "styled-components": "^5.3.6"
   },
